--- a/styles/style.css
+++ b/styles/style.css
@@ -79,40 +79,95 @@ hr{
 
 }
 /* Courses */
-.course-banner img{
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+.course{
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 5px 13px 0px #0000000D;
+    padding: 10px;
+}
+.course .course-banner img{
     width: 224px;
     height: 104px;
 }
 .course-title{
     font-size: 20px;
+    color: #1E1E1E;
+
 }
 .course-author{
-    font-size: 14px;
     color: #ED6B4F;
 
 }
 .course-info{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .fa-star{
-    color: #AEAEAE;
-    ;
     font-size: 12px;
 }
-.filled{
+.fa-star.filled{
     color: #FFC014;
-
 }
-.ratting{
+.fa-star.empty{
+    color: #AEAEAE;
+}
+.rating{
     color: #A2A2A2;
-    margin-left: 11px;
 }
-.duration{
+.course-duration{
     color: #FF4A60;
     background-color: #FEE5DF;
     width: 95px;
     height: 30px;
     text-align: center;
     border-radius: 15px;
-    margin-left: 30px;
+}
+/*-------------- 
+    Media Query 
+---------------*/
+
+/* Mobile Device */
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .blogs{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding: 50px;
+    }
+    .courses{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding: 20px 100px;
+    }
+    .course{
+        margin-bottom: 30px;
+    }
+    
+}
+/* Tablet Device */
+@media only screen and (min-width:688px) and (max-width:870px){
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
